# Build_CNN_FROM_SCRATCH

./: CMakeLists.txt  README.md  main.cpp  pgmfilter.cpp  random.pgm  trained_xor_model.txt  xor_test.cpp
include/: activation.hpp  convolution.hpp  layer.hpp  matrix.hpp  maxpool.hpp  neuron.hpp  nn.hpp  vec.hpp
source/: activation.cpp  convolution.cpp  layer.cpp  matrix.cpp  maxpool.cpp  neuron.cpp  nn.cpp  vec.cpp
